--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   <script defer src="/__/firebase/10.8.0/firebase-analytics-compat.js"></script>
   <script defer src="/__/firebase/10.8.0/firebase-remote-config-compat.js"></script>
   <script defer src="/__/firebase/10.8.0/firebase-performance-compat.js"></script>
+  <link rel="icon" type="image/x-icon" href="./logo2.png">
   <!-- 
       initialize the SDK after all desired features are loaded, set useEmulator to false
       to avoid connecting the SDK to running emulators.
